--- a/ex09/fabio_mazza/Aula_9_Exercício_Template_2att_layers_9tokens_temp.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Template_2att_layers_9tokens_temp.ipynb
@@ -3462,7 +3462,7 @@
         },
         "outputId": "2d72bb1e-9a18-482d-e700-670fb7e7fee2"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3520,7 +3520,7 @@
         "id": "3twP0YJC4jmJ",
         "outputId": "21c07da6-1c69-4ae1-8e8a-d477e92327f6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3592,7 +3592,7 @@
         "\n",
         "from collections import OrderedDict\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3608,7 +3608,7 @@
         },
         "outputId": "c6e66707-3903-430c-dfba-6f1c00928919"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3655,7 +3655,7 @@
         },
         "outputId": "5e69195a-98a5-48c2-ef7e-424e8313311b"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3717,7 +3717,7 @@
         "    def __getitem__(self, idx):\n",
         "        return self.inputs[idx], self.targets[idx]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3834,7 +3834,7 @@
         },
         "outputId": "c41fa010-e535-46ec-ff8c-42d77aa897f5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3969,7 +3969,7 @@
         "id": "hV8mOhS90Mdt",
         "outputId": "27045a5a-90b1-46c6-8727-1fac287f59af"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4006,38 +4006,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "mask_padding = first_batch_input == 0\n",
-        "mask_padding"
-      ],
-      "metadata": {
-        "id": "clix1aLr3KwM",
-        "outputId": "e3aa3a87-1332-4cbc-e839-1a82acbc3786",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([[False, False, False, False, False, False, False, False, False],\n",
-              "        [False, False, False, False, False, False, False, False, False],\n",
-              "        [False, False, False, False, False, False, False, False, False],\n",
-              "        [False, False, False, False, False,  True,  True,  True,  True],\n",
-              "        [False, False, False, False, False, False, False, False, False],\n",
-              "        [False, False, False, False, False, False, False, False, False]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 23
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "4LfrHHouleJ0"
@@ -4067,7 +4035,7 @@
         "id": "vGlN1WqrXPA6",
         "outputId": "fe10dcc9-f566-4617-d578-f13588b2a23d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4157,7 +4125,7 @@
         },
         "outputId": "85c2199e-5037-4e77-f560-48099364e214"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4225,7 +4193,7 @@
         },
         "outputId": "d7e7abab-0f1e-4872-f469-f61e9abb856a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4265,7 +4233,7 @@
         "                              ('ff2', torch.nn.Linear(n_ff, dim, device=device, bias = False))\n",
         "        ]))\n",
         "    \n",
-        "    def forward(self, X, inputs):\n",
+        "    def forward(self, X):\n",
         "\n",
         "        residual = X\n",
         "\n",
@@ -4275,18 +4243,9 @@
         "        scores = torch.matmul(Q, K.permute(0, 2, 1))\n",
         "        \n",
         "        #causal mask\n",
-        "        mask_causal = torch.ones((self.L, self.L), dtype=torch.bool)\n",
-        "        mask_causal = torch.triu(mask_causal, diagonal=1)\n",
-        "        #print(mask_causal.shape)\n",
-        "\n",
-        "        #padding mask\n",
-        "        mask_pad = (inputs == 0).unsqueeze(1).unsqueeze(2)\n",
-        "        print(mask_pad.shape)\n",
-        "\n",
-        "        #overall mask\n",
-        "        mask = mask_causal & mask_pad\n",
-        "\n",
-        "        scores[:, mask] = -1000000000\n",
+        "        mask = torch.ones((self.L, self.L), dtype=torch.bool)\n",
+        "        mask = torch.triu(mask, diagonal=1)\n",
+        "        scores[:, mask] = -1000000\n",
         "\n",
         "        probs = torch.nn.functional.softmax(scores, dim=0)\n",
         "        E = torch.matmul(probs, V)\n",
@@ -4344,15 +4303,14 @@
         "        Returns:\n",
         "            logits of shape (batch_size, max_seq_length, vocab_size)\n",
         "        \"\"\"\n",
-        "        \n",
         "        X = self.embedding(inputs)\n",
         "        X = X + self.positional\n",
-        "        E = self.attention(X, inputs)\n",
+        "        E = self.attention(X)\n",
         "        out = self.linear(E)\n",
         "\n",
         "        return out"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4369,10 +4327,9 @@
       "metadata": {
         "id": "RwnxfZlrZoT_",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 623
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2131f57d-7c35-465d-8896-fde97924dbd5"
+        "outputId": "26d48a24-c24d-4c97-94e4-0182465f787e"
       },
       "source": [
         "model = LanguageModel(\n",
@@ -4389,20 +4346,14 @@
         "print(f'sample_input.shape: {sample_input.shape}')\n",
         "print(f'sample_output.shape: {sample_output.shape}')"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-33-dba482283089>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0msample_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDataLoader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0msample_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msample_input\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0msample_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msample_input\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'sample_input.shape: {sample_input.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'sample_output.shape: {sample_output.shape}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-32-b286e717b5bc>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m    101\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpositional\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m         \u001b[0mE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mattention\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    104\u001b[0m         \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1108\u001b[0m         if not (self._backward_hooks or self._forward_hooks or self._forward_pre_hooks or _global_backward_hooks\n\u001b[1;32m   1109\u001b[0m                 or _global_forward_hooks or _global_forward_pre_hooks):\n\u001b[0;32m-> 1110\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mforward_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1111\u001b[0m         \u001b[0;31m# Do not call functions when jit is used\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1112\u001b[0m         \u001b[0mfull_backward_hooks\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnon_full_backward_hooks\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: forward() takes 2 positional arguments but 3 were given"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sample_input.shape: torch.Size([1, 9])\n",
+            "sample_output.shape: torch.Size([1, 9, 29794])\n"
           ]
         }
       ]
@@ -4420,7 +4371,7 @@
         "num_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
         "print(f'Number of model parameters: {num_params}')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4488,7 +4439,7 @@
         },
         "outputId": "d775b515-96e5-4748-999c-2e64edf60b8a"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4585,7 +4536,7 @@
         "        if n_examples >= max_examples:\n",
         "            break"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4645,7 +4596,7 @@
         "\n",
         "print(f'test perplexity: {test_ppl}')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4693,7 +4644,7 @@
         },
         "outputId": "252e2232-c524-440f-fd2c-d798ecee938e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4749,7 +4700,7 @@
         },
         "outputId": "332b97c7-d754-4b8f-dde5-0fdde1ac5bbf"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4805,7 +4756,7 @@
         },
         "outputId": "00bce742-2f83-4042-9c8c-4218f84fe88b"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
