--- a/ex09/fabio_mazza/Aula_9_Exercício_Final4.ipynb
+++ b/ex09/fabio_mazza/Aula_9_Exercício_Final4.ipynb
@@ -4774,7 +4774,7 @@
     {
       "cell_type": "code",
       "source": [
-        "prompt = 'O presidente do Senado, Rodrigo Pacheco, se reuniu com a'\n",
+        "prompt = 'Bia é a primeira brasileira a vencer um torneio profissional na grama'\n",
         "max_output_tokens = 20\n",
         "model.eval()\n",
         "\n",
@@ -4792,37 +4792,37 @@
       ],
       "metadata": {
         "id": "-CFElf4tsytW",
-        "outputId": "d5f828ca-4765-45f6-ff3e-3a4287072416",
+        "outputId": "6b762f55-a769-4e71-f22e-e8d095e40ad7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa,\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que é\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que é o\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que é o que\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que é o que é\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que é o que é o\n",
-            "O presidente do Senado, Rodrigo Pacheco, se reuniu com a sua casa, o que é o que é o que é o que é o que é o que\n"
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos,\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que é\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que é o\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que é o que\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que é o que é\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que é o que é o\n",
+            "Bia é a primeira brasileira a vencer um torneio profissional na grama de um dos seus filhos, o que é o que é o que é o que é o que\n"
           ]
         }
       ]
@@ -4830,7 +4830,7 @@
     {
       "cell_type": "code",
       "source": [
-        "prompt = 'Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com'\n",
+        "prompt = 'Os castelos não eram defensas comunitárias, mas foram construídas e de'\n",
         "max_output_tokens = 20\n",
         "model.eval()\n",
         "\n",
@@ -4848,37 +4848,37 @@
       ],
       "metadata": {
         "id": "qRj9Gwdh6ZKh",
-        "outputId": "a3602b13-c4d3-48b4-aaf2-5a0508a82b45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "130337d8-d114-45f3-e945-160389a86bce"
       },
-      "execution_count": 21,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é o que é\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é o que é o\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é o que é o que\n",
-            "Houve uma compreensão de que todas essas iniciativas deveriam ser coordenadas com o que o que é o que é o que é o que é o que é o que é\n"
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação,\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas de\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas de comunicação\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas de comunicação,\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas de comunicação, a\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas de comunicação, a partir\n",
+            "Os castelos não eram defensas comunitárias, mas foram construídas e de um dos maiores problemas de comunicação, a partir de um dos principais problemas de comunicação, a partir de\n"
           ]
         }
       ]
@@ -4904,10 +4904,10 @@
       ],
       "metadata": {
         "id": "VEeO1S4Y_fWq",
-        "outputId": "9dab67c7-84f3-49fd-998c-1a6ca660476c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9dab67c7-84f3-49fd-998c-1a6ca660476c"
       },
       "execution_count": 22,
       "outputs": [
@@ -4960,10 +4960,10 @@
       ],
       "metadata": {
         "id": "kKrOyUyI_gt1",
-        "outputId": "0d863240-41d6-474a-e155-92a41fc15146",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d863240-41d6-474a-e155-92a41fc15146"
       },
       "execution_count": 23,
       "outputs": [
@@ -4998,7 +4998,7 @@
     {
       "cell_type": "code",
       "source": [
-        "prompt = 'Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho'\n",
+        "prompt = 'Uma maternidade é especializada em cuidar de mulheres durante a gravidez'\n",
         "max_output_tokens = 20\n",
         "model.eval()\n",
         "\n",
@@ -5016,37 +5016,37 @@
       ],
       "metadata": {
         "id": "oWtLqZT0_hgN",
-        "outputId": "b6d2dfea-7d57-49a8-c7da-1bddc7c2651b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0428dbfe-e531-4b97-f269-d3306017129d"
       },
-      "execution_count": 24,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho,\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o que\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o que é\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o que é o\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o que é o que\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o que é o que é\n",
-            "Mais produtivo do que tentar definir Literatura talvez seja encontrar um caminho, mas não é o que é o que é o que é o que é o que é o\n"
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez,\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o que\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o que é\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o que é o\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o que é o que\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o que é o que é\n",
+            "Uma maternidade é especializada em cuidar de mulheres durante a gravidez, mas não é o que é o que é o que é o que é o que é o\n"
           ]
         }
       ]
